docs: Add native LateInteractionField vs _source rerank microbenchmark
Lucene 10.5 (bundled with OpenSearch 3.8) LateInteractionField + SIMD
rescorer scores MaxSim ~34x faster than deserialize-from-_source + loop
on SciFact (13.1ms vs 440.9ms/query, identical scores). Confirms the
_source bottleneck behind Hypothesis 3 and RFC #3439. Adds the Java
harness and raw log.

Signed-off-by: Praveen Mohan Prasad <prasadnu@amazon.com>